force-app/main/default/objects/FlexiPage_Cache_Refresh__e/FlexiPage_Cache_Refresh__e.object-meta.xml
<CustomObject>
    <label>FlexiPage Cache Refresh</label>
    <pluralLabel>FlexiPage Cache Refreshes</pluralLabel>
</CustomObject>