force-app/main/default/objects/FlexiPage_Cache_Refresh__e/fields/FlexiPage_Developer_Name__c.field-meta.xml
<CustomField>
    <fullName>FlexiPage_Developer_Name__c</fullName>
    <label>FlexiPage Developer Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>