force-app/main/default/objects/FlexiPage_Cache_Refresh__e/fields/Performed_By_User_Id__c.field-meta.xml
<CustomField>
    <fullName>Performed_By_User_Id__c</fullName>
    <label>Performed By User Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>